[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/city_hall_background.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/button_script.gd" type="Script" id=2]
[ext_resource path="res://assets/CALIBRI.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/CandyMusic.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/Square.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/AreaBeginnerFinal.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="CityHallBackground" type="Sprite" parent="."]
position = Vector2( 515.25, 299 )
scale = Vector2( 1.0718, 1.0411 )
texture = ExtResource( 1 )

[node name="Square" type="Sprite" parent="."]
position = Vector2( 840, 144 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 861.0
margin_top = 522.0
margin_right = 988.0
margin_bottom = 583.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "NEXT"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
reference_path = "res://src/StartUpScreen/FinalCelebration.tscn"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 784.0
margin_top = 225.0
margin_right = 917.0
margin_bottom = 265.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "L= 6 ft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 41.0
margin_top = 100.0
margin_right = 89.0
margin_bottom = 115.0
rect_scale = Vector2( 12.7824, 5.09583 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 51.0
margin_top = 104.0
margin_right = 651.0
margin_bottom = 182.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Length of the square is 6 ft. What is the area of the given square?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="Button" parent="." groups=["AnswerButtons"]]
margin_left = 261.0
margin_top = 322.0
margin_right = 407.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 4 )
text = "24 sq. ft."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="." groups=["AnswerButtons"]]
margin_left = 599.0
margin_top = 321.0
margin_right = 743.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 5 )
text = "18 sq. ft."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="Button" parent="." groups=["AnswerButtons"]]
margin_left = 261.0
margin_top = 425.0
margin_right = 406.0
margin_bottom = 481.0
custom_fonts/font = SubResource( 6 )
text = "12 sq. ft."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option4" type="Button" parent="." groups=["AnswerButtons"]]
margin_left = 606.0
margin_top = 428.0
margin_right = 745.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 7 )
text = "36 sq. ft."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongAns" type="WindowDialog" parent="."]
margin_left = 330.0
margin_top = 246.0
margin_right = 683.0
margin_bottom = 457.0
window_title = "Good Try!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="WrongAns"]
margin_right = 353.0
margin_bottom = 209.0

[node name="RichTextLabel" type="RichTextLabel" parent="WrongAns"]
margin_left = 58.0
margin_top = 58.0
margin_right = 370.0
margin_bottom = 198.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
text = "Good try...give it another shot. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutofAttempts" type="WindowDialog" parent="."]
margin_left = 332.0
margin_top = 245.0
margin_right = 683.0
margin_bottom = 458.0
window_title = "Good Try!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OutofAttempts"]
margin_top = -2.0
margin_right = 353.0
margin_bottom = 215.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="OutofAttempts"]
margin_left = 28.0
margin_top = 44.0
margin_right = 356.0
margin_bottom = 219.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
text = "Good try. Sadly, you're out of attempts. Go ahead try another challenge."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightAns" type="WindowDialog" parent="."]
margin_left = 837.0
margin_top = 325.0
margin_right = 1188.0
margin_bottom = 539.0
window_title = "Great Job!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="RightAns"]
margin_left = -2.0
margin_right = 353.0
margin_bottom = 218.0

[node name="RichTextLabel" type="RichTextLabel" parent="RightAns"]
margin_left = 17.0
margin_top = 46.0
margin_right = 350.0
margin_bottom = 177.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 10 )
text = "Great job! You completed this stage. Move on to the next stage on the map. You're doing great!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_Option3_pressed"]
[connection signal="pressed" from="Option4" to="." method="_on_Option4_pressed"]
